--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   text-align: center;
-  background-color: #f2f2f2;
+  background-color: #000000;
   background-image: url("background.png"); /* Add your own background image */
   background-repeat: repeat;
   background-size: cover;
