--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,19 @@ body {
   font-size: 3rem;
   margin: 5%;
   color: #f7ff3c; /* Neon yellow */
-  text-shadow: 0 0 10px #f7ff3c; /* Neon yellow glow */
+}
+
+.start-glow {
+  animation: glow 1s ease-in-out infinite alternate;
+}
+
+@keyframes glow {
+  from {
+    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #fff;
+  }
+  to {
+    text-shadow: 0 0 20px #f7ff3c, 0 0 30px #f7ff3c, 0 0 40px #f7ff3c;
+  }
 }
 
 .container {
