--- a/styles.css
+++ b/styles.css
@@ -12,15 +12,7 @@ body {
   margin: 5%;
   color: #f7ff3c; /* Neon yellow */
   animation: glow 1.5s ease-in-out infinite alternate;
-}
-
-@keyframes glow {
-  0% {
-    text-shadow: 0 0 5px #f7ff3c; /* Dim glow effect */
-  }
-  100% {
-    text-shadow: 0 0 15px #f7ff3c; /* Slightly brighter glow effect */
-  }
+  text-shadow: 0 0 5px #f7ff3c; /* Dim glow effect */
 }
 
 .container {
@@ -83,14 +75,7 @@ body {
   text-align: center;
 }
 
-#overlay h2 {
-  font-family: "Press Start 2P", cursive;
-  font-size: 2.5rem; /* Larger font size */
-  margin-bottom: 20px;
-  color: #f7ff3c; /* Neon yellow */
-  text-shadow: 0 0 10px #f7ff3c; /* Neon glow effect */
-}
-
+#overlay h2,
 #overlay p {
   font-family: "Press Start 2P", cursive;
   font-size: 1.5rem; /* Larger font size */
@@ -98,4 +83,9 @@ body {
   line-height: 1.5;
   color: #f7ff3c; /* Neon yellow */
   text-shadow: 0 0 5px #f7ff3c; /* Neon glow effect */
+}
+
+#overlay h2 {
+  font-size: 2.5rem; /* Larger font size */
+  margin-bottom: 20px;
 }
