--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,15 @@ body {
   margin: 5%;
   color: #f7ff3c; /* Neon yellow */
   animation: glow 1.5s ease-in-out infinite alternate;
-  text-shadow: 0 0 5px #f7ff3c; /* Dim glow effect */
+}
+
+@keyframes glow {
+  0% {
+    text-shadow: 0 0 5px rgba(247, 255, 60, 0.5), 0 0 10px rgba(247, 255, 60, 0.5);
+  }
+  100% {
+    text-shadow: 0 0 15px rgba(247, 255, 60, 0.8), 0 0 30px rgba(247, 255, 60, 0.8);
+  }
 }
 
 .container {
@@ -75,17 +83,18 @@ body {
   text-align: center;
 }
 
-#overlay h2,
+#overlay h2 {
+  font-family: "Press Start 2P", cursive;
+  font-size: 2.5rem; /* Larger font size */
+  margin-bottom: 20px;
+  color: #f7ff3c; /* Neon yellow */
+  text-shadow: 0 0 10px #f7ff3c; /* Neon glow effect */
+}
+
 #overlay p {
   font-family: "Press Start 2P", cursive;
   font-size: 1.5rem; /* Larger font size */
   margin-bottom: 10px;
   line-height: 1.5;
   color: #f7ff3c; /* Neon yellow */
-  text-shadow: 0 0 5px #f7ff3c; /* Neon glow effect */
-}
-
-#overlay h2 {
-  font-size: 2.5rem; /* Larger font size */
-  margin-bottom: 20px;
-}
+  text-shadow: 0 0 5px #f7ff3c
